# taglib_ffi

./: .gitignore  .gitmodules  README.md  ffigen.yaml  melos.yaml  pubspec.yaml
Meipuru/: .gitmodules  CMakeLists.txt
Meipuru/binding/: binding.cpp
Meipuru/include/: MeipuruReader.h  binding.h
Meipuru/script/: build_android.sh
Meipuru/src/: BaseTag.cpp  BaseTag.h  ID3v2Tag.cpp  ID3v2Tag.h  MeipuruExport.h  MeipuruReader.cpp  Utils.h
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/kzs/th000/taglib_ffi/: TaglibFfiPlugin.kt
example/: pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/kzs/th000/taglib_ffi_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/test/: widget_test.dart
example/windows/runner/: Runner.rc
lib/: taglib_ffi.dart
lib/bindings/: meipuru_binding.h
lib/src/: taglib_bindings.dart  taglib_ffi.dart  taglib_ffi_bindings_generated.dart
linux/: CMakeLists.txt  taglib_ffi_plugin.cc
linux/include/taglib_ffi/: taglib_ffi_plugin.h
scripts/: build_android.sh
src/: CMakeLists.txt  taglib_ffi.cpp  taglib_ffi.h
src/example/: CMakeLists.txt  example.c
src/src/: BaseTag.h  ID3v2Tag.cpp  ID3v2Tag.h  MeipuruReader.cpp  MeipuruReader.h  Utils.h
test/: taglib_ffi_method_channel_test.dart  taglib_ffi_test.dart
windows/: CMakeLists.txt  taglib_ffi_plugin.cpp  taglib_ffi_plugin.h  taglib_ffi_plugin_c_api.cpp
windows/include/taglib_ffi/: taglib_ffi_plugin_c_api.h
